Replace @Lombok.Data with @Lombok.Getter/Setter, because it conflicts with @Entity and @JsonIgnore.

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -1,26 +1,27 @@
 <!DOCTYPE html>
 <html th:lang="${lang}">
-<head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="apple-mobile-web-app-capable" content="yes">
-<meta name="apple-mobile-web-app-title" content="Alovoa">
-<link rel="manifest" href="/manifest/manifest.json">
 
-<link rel="stylesheet" href="/css/lib/bulma.min.css" />
-<th:block th:replace="fragments.html::bulma"></th:block>
-<th:block th:replace="fragments.html::ui-design"></th:block>
-<link rel="stylesheet" href="/css/alovoa.css" />
-<link rel="stylesheet" href="/css/privacy.css" />
-<title th:text="#{admin.title}"></title>
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<meta name="apple-mobile-web-app-title" content="Alovoa">
+	<link rel="manifest" href="/manifest/manifest.json">
+
+	<link rel="stylesheet" href="/css/lib/bulma.min.css" />
+	<th:block th:replace="fragments.html::bulma"></th:block>
+	<th:block th:replace="fragments.html::ui-design"></th:block>
+	<link rel="stylesheet" href="/css/alovoa.css" />
+	<link rel="stylesheet" href="/css/privacy.css" />
+	<title th:text="#{admin.title}"></title>
 </head>
+
 <body>
 	<div id="main">
 		<header th:insert="fragments.html::header-logged-in"></header>
 		<div style="padding-top: 4px;"></div>
-		<div id="contact" class="box"
-			style="max-height: 330px; overflow: auto;">
+		<div id="contact" class="box" style="max-height: 330px; overflow: auto;">
 			<h3 th:text="#{contact}"></h3>
 			<div th:each="contact : ${contacts}" style="padding-bottom: 16px;" th:id="'contact' + ${contact.id}">
 				<input class="input" th:value="${contact.email}" readonly></input>
@@ -32,23 +33,17 @@
 			</div>
 		</div>
 
-		<div id="report" class="box"
-			style="max-height: 693px; overflow: auto;">
+		<div id="report" class="box" style="max-height: 693px; overflow: auto;">
 			<h3 th:text="#{reports}"></h3>
-			<div th:each="report : ${reports}" style="padding-bottom: 16px;"  th:id="'report' + ${report.id}" th:class="'user' + ${report.userTo.id}">
+			<div th:each="report : ${reports}" style="padding-bottom: 16px;" th:id="'report' + ${report.id}"
+				th:class="'user' + ${report.userTo.id}">
 				<h4 th:text="${report.userTo.firstName}"></h4>
-				<div>
-					<img th:src="${report.userTo.profilePicture}" width=250> <img
-						th:each="img : ${report.userTo.images}" th:src="${img.content}"
-						width=250>
-				</div>
-				<textarea class="textarea" th:text="${report.userTo.description}"
-					readonly></textarea>
+				<textarea class="textarea" th:text="${report.userTo.description}" readonly></textarea>
 				<div style="padding-top: 4px;"></div>
 				<textarea class="textarea" th:text="${report.comment}" readonly></textarea>
 				<div style="padding-top: 4px;"></div>
-				<button class="button" th:text="#{view-profile}"
-					th:onclick="viewProfile([[${report.userToIdEnc}]])"></button>
+				<button class="button" th:onclick="viewProfile([[${report.userToIdEnc}]])"><i
+						class="fa fa-user"></i></button>
 				<button class="button" th:text="#{admin.delete-report}"
 					th:onclick="deleteReport([[${report.id}]])"></button>
 				<button class="button" th:text="#{admin.ban-user}"
@@ -61,11 +56,9 @@
 			<form id="mail-single-form" th:action="@{/admin/mail/single}" method="POST">
 				<input class="input" name="email" th:placeholder="#{email}" required>
 				<div style="padding-top: 4px;"></div>
-				<input class="input" name="subject" th:placeholder="#{subject}"
-					required>
+				<input class="input" name="subject" th:placeholder="#{subject}" required>
 				<div style="padding-top: 4px;"></div>
-				<textarea class="textarea" name="body" th:placeholder="#{message}"
-					required></textarea>
+				<textarea class="textarea" name="body" th:placeholder="#{message}" required></textarea>
 				<div style="padding-top: 4px;"></div>
 				<button class="button" th:text="#{submit}"></button>
 			</form>
@@ -74,11 +67,9 @@
 		<div id="mail-all" class="box">
 			<h3 th:text="#{admin.mail.send-all}"></h3>
 			<form id="mail-all-form" th:action="@{/admin/mail/all}" method="POST">
-				<input class="input" name="subject" th:placeholder="#{subject}"
-					required>
+				<input class="input" name="subject" th:placeholder="#{subject}" required>
 				<div style="padding-top: 4px;"></div>
-				<textarea class="textarea" name="body" th:placeholder="#{message}"
-					required></textarea>
+				<textarea class="textarea" name="body" th:placeholder="#{message}" required></textarea>
 				<div style="padding-top: 4px;"></div>
 				<button class="button" th:text="#{submit}"></button>
 			</form>
@@ -93,4 +84,5 @@
 	<script src="/js/alovoa.js"></script>
 	<script src="/js/admin.js"></script>
 </body>
+
 </html>
