A few changes for playstore app

--- a/src/main/resources/templates/donate-list.html
+++ b/src/main/resources/templates/donate-list.html
@@ -49,15 +49,13 @@
 						<span style="word-break: break-all">BTC:
 							bc1q5yejhe5rv0m7j0euxml7klkd2ummw0gc3vx58p</span>
 					</div>
-
 				</div>
 			</div>
-
-
 		</div>
 	</div>
 
 	<script src="/js/tools/get-text.js"></script>
+	<script src="/js/lib/cookies.js"></script>
 	<script src="/js/lib/fontawesome.all.js"></script>
 	<script src="/js/lib/jquery.min.js"></script>
 	<script src="/js/alovoa.js"></script>
