--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -170,6 +170,7 @@
 		<footer th:replace="fragments.html::footer"></footer>
 	</div>
 
+	<script src="/js/lib/cookies.js"></script>
 	<script src="/js/lib/fontawesome.all.js"></script>
 	<script src="/js/lib/jquery.min.js"></script>
 	<script src="/js/lib/bulma-collapsible.min.js"></script>
