--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -74,6 +74,14 @@
 				<button class="button" th:text="#{submit}"></button>
 			</form>
 		</div>
+		
+		<div id="delete-account" class="box">
+			<h3 th:text="#{profile.account.delete}"></h3>
+			<form id="delete-account-form" th:action="@{/admin/delete-account}" method="POST">
+				<input class="input" name="email" th:placeholder="#{email}" required>
+				<button class="button" th:text="#{submit}"></button>
+			</form>
+		</div>
 
 	</div>
 	<footer th:replace="fragments.html::footer"></footer>
