More changes for Playstore rules

--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -340,6 +340,7 @@
 	<footer th:replace="fragments.html::navigation"></footer>
 	<footer th:replace="fragments.html::footer"></footer>
 
+	<script src="/js/lib/cookies.js"></script>
 	<script src="/js/lib/fontawesome.all.js"></script>
 	<script src="/js/lib/jquery.min.js"></script>
 	<script src="/js/lib/bulma-slider.min.js"></script>
