--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -136,12 +136,12 @@
 							<button class="button colored"
 								style="background-color: #4285F4; width: 100%; margin-right: 4px; margin-bottom: 8px;"
 								onclick="window.location='/oauth2/authorization/google'">
-								<img src="/img/google-icon.svg" style="height: 32px;"><span
+								<img src="/img/g-icon.svg" style="height: 32px;"><span
 									style="padding-left: 6px; color: white;" th:text="#{register.oauth.google}"></span>
 							</button>
 							<button class="button colored" style="background-color: #4267b2; width: 100%;"
 								onclick="window.location='/oauth2/authorization/facebook'">
-								<img src="/img/facebook-icon.svg" style="height: 32px;"><span
+								<img src="/img/f-icon.svg" style="height: 32px;"><span
 									style="padding-left: 6px; color: white;"
 									th:text="#{register.oauth.facebook}"></span>
 							</button>
