--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -297,6 +297,9 @@
 
 				<div class="box">
 					<div class="field">
+						<a th:text="#{profile.webpush}" onclick="subscribe()"></a>
+					</div>
+					<div class="field">
 						<a th:text="#{profile.liked-users}" href="/liked-users"></a>
 					</div>
 					<div class="field">
