Add social icons and links

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -122,6 +122,13 @@ oc
 						<a href="/faq" th:text="#{faq}"></a>
 					</div>
 				</div>
+				<div class="column">
+					<div class="has-text-centered">
+						<a href="https://twitter.com/alovoa_love"><img src="/img/t-icon.svg" style="height: 20px;"></a>
+						<a href="https://mastodon.social/@alovoa_love"><img src="/img/m-icon.svg"
+								style="height: 20px;"></a>
+					</div>
+				</div>
 			</div>
 		</div>
 
