Overall web improvements

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -1,4 +1,3 @@
-oc
 <!DOCTYPE html>
 <html>
 
@@ -25,7 +24,7 @@ oc
 	<div th:fragment="header-logged-out" id="header-logged-out" class="header">
 		<nav class="navbar is-info">
 			<div class="navbar-brand">
-				<a class="navbar-item" href="/"> <img src="/img/icon.png" width="40" height="40">
+				<a class="navbar-item" href="/"> <img src="/img/icon.png" width="40" height="40" alt="logo">
 				</a> <a class="navbar-item" href="/" id="navbar-text" th:text="#{app.name}"></a>
 			</div>
 
@@ -124,9 +123,10 @@ oc
 				</div>
 				<div class="column">
 					<div class="has-text-centered">
-						<a href="https://twitter.com/alovoa_love"><img src="/img/t-icon.svg" style="height: 20px;"></a>
-						<a href="https://mastodon.social/@alovoa_love"><img src="/img/m-icon.svg"
-								style="height: 20px;"></a>
+						<a href="https://twitter.com/alovoa_love"><img src="/img/t-icon.svg" style="height: 20px;"
+								alt="twitter"></a>
+						<a href="https://mastodon.social/@alovoa_love"><img src="/img/m-icon.svg" style="height: 20px;"
+								alt="mastodon"></a>
 					</div>
 				</div>
 			</div>
