--- a/src/main/resources/templates/register-oauth.html
+++ b/src/main/resources/templates/register-oauth.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html th:lang="${lang}">
+<html th:with="lang=${#locale.language}" th:lang="${lang}">
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
