Disable word break in userProfile

--- a/src/main/resources/templates/user-profile.html
+++ b/src/main/resources/templates/user-profile.html
@@ -89,8 +89,7 @@
 					<div class="field">
 						<label class="label" th:text="#{description}"></label>
 						<textarea class="textarea" id="description"
-							th:text="${user.description}"
-							style="word-break: break-all;" readOnly></textarea>
+							th:text="${user.description}" readOnly></textarea>
 					</div>
 
 					<div class="field" th:if="${user.hasAudio}"
