Fixing Service Worker

--- a/src/main/resources/templates/donate-list.html
+++ b/src/main/resources/templates/donate-list.html
@@ -54,6 +54,7 @@
 		</div>
 	</div>
 
+	<script src="/sw.js"></script>
 	<script src="/js/tools/get-text.js"></script>
 	<script src="/js/lib/cookies.js"></script>
 	<script src="/js/lib/fontawesome.all.js"></script>
