--- a/src/main/resources/templates/donate.html
+++ b/src/main/resources/templates/donate.html
@@ -45,6 +45,7 @@
 	</div>
 	<footer th:replace="fragments.html::navigation"></footer>
 
+	<script src="/sw.js"></script>
 	<script src="/js/lib/fontawesome.all.js"></script>
 	<script src="/js/lib/jquery.min.js"></script>
 	<script src="/js/tools/get-notification.js"></script>
