--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -359,6 +359,7 @@
 	<footer th:replace="fragments.html::navigation"></footer>
 	<footer th:replace="fragments.html::footer"></footer>
 
+	<script src="/sw.js"></script>
 	<script src="/js/lib/cookies.js"></script>
 	<script src="/js/lib/fontawesome.all.js"></script>
 	<script src="/js/lib/jquery.min.js"></script>
