--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -160,6 +160,7 @@
 
 	<footer th:replace="fragments.html::footer"></footer>
 
+	<script src="/sw.js"></script>
 	<script src="/js/lib/fontawesome.all.js"></script>
 	<script src="/js/lib/jquery.min.js"></script>
 	<script src="/js/lib/bulma-collapsible.min.js"></script>
@@ -168,8 +169,6 @@
 	<script src="/js/tools/get-text.js"></script>
 	<script src="/js/alovoa.js"></script>
 	<script src="/js/register.js"></script>
-
-
 
 </body>
 
