--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -90,6 +90,7 @@
 	</div>
 	<footer th:replace="fragments.html::footer"></footer>
 
+	<script src="/sw.js"></script>
 	<script src="/js/lib/jquery.min.js"></script>
 	<script src="/js/lib/fontawesome.all.js"></script>
 	<script src="/js/tools/get-text.js"></script>
