--- a/src/main/resources/templates/faq.html
+++ b/src/main/resources/templates/faq.html
@@ -49,6 +49,7 @@
 	</div>
 	<footer th:replace="fragments.html::footer"></footer>
 
+	<script src="/sw.js"></script>
 	<script src="/js/lib/jquery.min.js"></script>
 	<script src="/js/lib/fontawesome.all.js"></script>
 	<script src="/js/alovoa.js"></script>
