--- a/src/main/resources/templates/imprint.html
+++ b/src/main/resources/templates/imprint.html
@@ -47,6 +47,7 @@
 	</div>
 	<footer th:replace="fragments.html::footer"></footer>
 
+	<script src="/sw.js"></script>
 	<script src="/js/lib/jquery.min.js"></script>
 	<script src="/js/lib/fontawesome.all.js"></script>
 	<script src="/js/tools/refresh-captcha.js"></script>
