--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -103,6 +103,7 @@
 	</div>
 	<footer th:replace="fragments.html::footer"></footer>
 
+	<script src="/sw.js"></script>
 	<script src="/js/lib/jquery.min.js"></script>
 	<script src="/js/lib/fontawesome.all.js"></script>
 	<script src="/js/lib/bulma-collapsible.min.js"></script>
