--- a/src/main/resources/templates/messages.html
+++ b/src/main/resources/templates/messages.html
@@ -54,6 +54,7 @@
 
 	<footer th:replace="fragments.html::navigation"></footer>
 
+	<script src="/sw.js"></script>
 	<script src="/js/lib/fontawesome.all.js"></script>
 	<script src="/js/lib/jquery.min.js"></script>
 	<script src="/js/tools/get-notification.js"></script>
