--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -116,6 +116,7 @@
 
 	<footer th:replace="fragments.html::navigation"></footer>
 
+	<script src="/sw.js"></script>
 	<script src="/js/lib/fontawesome.all.js"></script>
 	<script src="/js/lib/jquery.min.js"></script>
 	<script src="/js/lib/swiper.min.js"></script>
