--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -123,6 +123,8 @@
 				</div>
 				<div class="column">
 					<div class="has-text-centered">
+						<a href="https://www.reddit.com/r/Alovoa/"><img src="/img/r-icon.svg" style="height: 20px;"
+								alt="reddit"></a>
 						<a href="https://twitter.com/alovoa_love"><img src="/img/t-icon.svg" style="height: 20px;"
 								alt="twitter"></a>
 						<a href="https://mastodon.social/@alovoa_love"><img src="/img/m-icon.svg" style="height: 20px;"
