--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -26,7 +26,7 @@
 				<div>
 					<h3 class="title" th:text="#{login.title}"></h3>
 					<p class="subtitle" th:text="#{login.subtitle}"></p>
-					<div class="notification is-primary"><span th:text="#{login.privacy-policy}"></span> <span
+					<div class="notification is-primary"><span
 							th:text="${privacyPolicyDate}"></span></div>
 
 					<div class="box no-shadow" style="padding: 0px; margin-bottom: 0px;">
