--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -319,6 +319,9 @@
 						<a th:text="#{profile.liked-users}" href="/liked-users"></a>
 					</div>
 					<div class="field">
+						<a th:text="#{profile.disliked-users}" href="/disliked-users"></a>
+					</div>
+					<div class="field">
 						<a th:text="#{profile.blocked-users}" href="/blocked-users"></a>
 					</div>
 					<div class="field">
