--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -316,10 +316,10 @@
 						<a th:text="#{profile.webpush}" onclick="subscribe()"></a>
 					</div>
 					<div class="field">
-						<a th:text="#{profile.liked-users}" href="/liked-users"></a>
+						<a th:text="#{profile.liked-users}" href="/user/liked-users"></a>
 					</div>
 					<div class="field">
-						<a th:text="#{profile.disliked-users}" href="/disliked-users"></a>
+						<a th:text="#{profile.disliked-users}" href="/user/disliked-users"></a>
 					</div>
 					<div class="field">
 						<a th:text="#{profile.blocked-users}" href="/blocked-users"></a>
