--- a/src/main/resources/templates/disliked-users.html
+++ b/src/main/resources/templates/disliked-users.html
@@ -53,7 +53,7 @@
 
 	<script>
 		function viewProfile(idEnc) {
-			let url = 'profile/view/' + idEnc;
+			let url = '/profile/view/' + idEnc;
 			window.open(url, '_blank').focus();
 		}
 	</script>
