Basic referral implementation

--- a/src/main/resources/templates/register-oauth.html
+++ b/src/main/resources/templates/register-oauth.html
@@ -44,8 +44,6 @@
 							</div>
 						</div>
 
-						<div style="height: 2px"></div>
-
 						<div class="field">
 							<label class="label" th:text="#{gender}" style="float: left;"></label><span
 								class="asterisk">*</span>
@@ -66,6 +64,14 @@
 								</select>
 							</div>
 						</div>
+						
+						<div class="field">
+							<label class="label" th:text="#{register.referrer-email}" style="float: left;"></label>
+							<div class="control">
+								<input class="input" type="email" name="referrerEmail">
+							</div>
+						</div>
+								
 						<div style="height: 24px"></div>
 
 						<div class="field">
