More stuff for referrals

--- a/src/main/resources/static/css/alovoa.css
+++ b/src/main/resources/static/css/alovoa.css
@@ -266,6 +266,10 @@ input[type=range].slider {
 	color: #0D47A1;
 }
 
+.toast-container {
+	margin-bottom: 68px;
+}
+
 @media screen and (max-width: 1024px) {
 	* {
 		scrollbar-width: none;
