--- a/src/main/resources/templates/register-oauth.html
+++ b/src/main/resources/templates/register-oauth.html
@@ -68,7 +68,7 @@
 						<div class="field">
 							<label class="label" th:text="#{register.referrer-email}" style="float: left;"></label>
 							<div class="control">
-								<input class="input" type="email" name="referrerEmail">
+								<input class="input" type="email" name="referrerEmail" id="referrer">
 							</div>
 						</div>
 								
@@ -111,6 +111,7 @@
 	<script src="/sw.js"></script>
 	<script src="/js/lib/fontawesome.all.js"></script>
 	<script src="/js/lib/jquery.min.js"></script>
+	<script src="/js/tools/validate-email.js"></script>
 	<script src="/js/alovoa.js"></script>
 	<script src="/js/register-oauth.js"></script>
 
