--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -105,7 +105,7 @@
 								<div class="field">
 									<label class="label" th:text="#{register.referrer-email}" style="float: left;"></label>
 									<div class="control">
-										<input class="input" type="email" name="referrerEmail">
+										<input class="input" type="email" name="referrerEmail" id="referrer">
 									</div>
 								</div>
 								
@@ -175,6 +175,7 @@
 	<script src="/js/tools/refresh-captcha.js"></script>
 	<script src="/js/tools/check-password.js"></script>
 	<script src="/js/tools/get-text.js"></script>
+	<script src="/js/tools/validate-email.js"></script>
 	<script src="/js/alovoa.js"></script>
 	<script src="/js/register.js"></script>
 
