Use anonymous code instead of using email to improve privacy

--- a/src/main/resources/templates/register-oauth.html
+++ b/src/main/resources/templates/register-oauth.html
@@ -66,9 +66,9 @@
 						</div>
 						
 						<div class="field">
-							<label class="label" th:text="#{register.referrer-email}" style="float: left;"></label>
+							<label class="label" th:text="#{register.referral-code}" style="float: left;"></label>
 							<div class="control">
-								<input class="input" type="email" name="referrerEmail" id="referrer">
+								<input class="input" name="referrerCode" id="referrer">
 							</div>
 						</div>
 								
@@ -111,7 +111,6 @@
 	<script src="/sw.js"></script>
 	<script src="/js/lib/fontawesome.all.js"></script>
 	<script src="/js/lib/jquery.min.js"></script>
-	<script src="/js/tools/validate-email.js"></script>
 	<script src="/js/alovoa.js"></script>
 	<script src="/js/register-oauth.js"></script>
 
