--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -103,9 +103,9 @@
 								</div>
 								
 								<div class="field">
-									<label class="label" th:text="#{register.referrer-email}" style="float: left;"></label>
+									<label class="label" th:text="#{register.referral-code}" style="float: left;"></label>
 									<div class="control">
-										<input class="input" type="email" name="referrerEmail" id="referrer">
+										<input class="input" name="referrerCode" id="referrer">
 									</div>
 								</div>
 								
@@ -175,7 +175,6 @@
 	<script src="/js/tools/refresh-captcha.js"></script>
 	<script src="/js/tools/check-password.js"></script>
 	<script src="/js/tools/get-text.js"></script>
-	<script src="/js/tools/validate-email.js"></script>
 	<script src="/js/alovoa.js"></script>
 	<script src="/js/register.js"></script>
 
