--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -35,8 +35,7 @@
 
 				<div class="field">
 					<div class="button is-info is-outlined button-wrap-text" id="btnPushNotifications" name="btnPushNotifications"
-						style="width: 100%; height: 100%;
-        white-space: normal;"><span th:text="#{profile.webpush}"></span></div>
+						style="width: 100%; height: 100%;  white-space: normal;"><span th:text="#{profile.webpush}"></span></div>
 				</div>
 
 				<div style="padding-bottom: 24px;"></div>
