--- a/src/main/resources/templates/user-profile.html
+++ b/src/main/resources/templates/user-profile.html
@@ -137,9 +137,14 @@
 								</th>
 							</tr>
 							<tr>
+								<th th:text="#{profile.pref-age-range}"></th>
+								<td
+									th:text="${user.preferedMinAge + ' - ' + user.preferedMaxAge}"></td>
+							</tr>
+							<tr>
 								<th th:text="#{donated}"></th>
 								<td
-									th:text=" ${#numbers.formatDecimal(user.totalDonations, 1, 2, 'POINT') + ' €'}"></td>
+									th:text="${#numbers.formatDecimal(user.totalDonations, 1, 2, 'POINT') + ' €'}"></td>
 							</tr>
 							<tr>
 								<th th:text="#{userprofile.num-blocks}"></th>
